--- a/src/js-version/histogramv4.html
+++ b/src/js-version/histogramv4.html
@@ -1,146 +1,159 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <style>
+  body {
+    font: 10px sans-serif;
+  }
 
-body {
-  font: 10px sans-serif;
-}
+  .bar rect {
+    shape-rendering: crispEdges;
+  }
 
-.bar rect {
-  shape-rendering: crispEdges;
-}
+  .bar text {
+    fill: #999999;
+  }
 
-.bar text {
-  fill: #999999;
-}
-
-.axis path, .axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
-
+  .axis path,
+  .axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+  }
 </style>
+
 <body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script>
 
-var color = "steelblue";
 
-// Generate a 1000 data points using normal distribution with mean=20, deviation=5
-var values = d3.range(1000).map(d3.random.normal(20, 5));
+  <h1>Larry's Version</h1>
 
-// A formatter for counts.
-var formatCount = d3.format(",.0f");
+  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script>
 
-var margin = {top: 20, right: 30, bottom: 30, left: 30},
-    width = 960 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
+    var color = "steelblue";
+    var ticks = 100;
 
-var max = d3.max(values);
-var min = d3.min(values);
-var x = d3.scale.linear()
+    // Generate a 1000 data points using normal distribution with mean=20, deviation=5
+    var values = d3.range(1000).map(d3.random.normal(20, 5));
+
+    // A formatter for counts.
+    var formatCount = d3.format(",.0f");
+
+    var margin = { top: 20, right: 30, bottom: 30, left: 30 },
+      width = 960 - margin.left - margin.right,
+      height = 500 - margin.top - margin.bottom;
+
+    var max = d3.max(values);
+    var min = d3.min(values);
+    var x = d3.scale.linear()
       .domain([min, max])
       .range([0, width]);
-console.log('x---',x);
+    console.log('x---', x);
 
-// Generate a histogram using twenty uniformly-spaced bins.
-var data = d3.layout.histogram()
-    .bins(x.ticks(20))
-    (values);
+    // Generate a histogram using twenty uniformly-spaced bins.
+    var data = d3.layout.histogram()
+      .bins(x.ticks(ticks))
+      (values);
 
-var yMax = d3.max(data, function(d){return d.length});
-var yMin = d3.min(data, function(d){return d.length});
-var colorScale = d3.scale.linear()
-            .domain([yMin, yMax])
-            .range([d3.rgb(color).brighter(), d3.rgb(color).darker()]);
+    var yMax = d3.max(data, function (d) { return d.length });
+    var yMin = d3.min(data, function (d) { return d.length });
+    var colorScale = d3.scale.linear()
+      .domain([yMin, yMax])
+      .range([d3.rgb(color).brighter(), d3.rgb(color).darker()]);
 
-var y = d3.scale.linear()
-    .domain([0, yMax])
-    .range([height, 0]);
+    var y = d3.scale.linear()
+      .domain([0, yMax])
+      .range([height, 0]);
 
-var xAxis = d3.svg.axis()
-    .scale(x)
-    .orient("bottom");
+    var xAxis = d3.svg.axis()
+      .scale(x)
+      .orient("bottom");
 
-var svg = d3.select("body").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+    var svg = d3.select("body").append("svg")
+      .attr("width", width + margin.left + margin.right)
+      .attr("height", height + margin.top + margin.bottom)
+      .append("g")
+      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-console.log(x);
+    console.log(x);
 
-var bar = svg.selectAll(".bar")
-    .data(data)
-  .enter().append("g")
-    .attr("class", "bar")
-    .attr("transform", function(d) { return "translate(" + x(d.x) + "," + y(d.y) + ")"; });
+    var bar = svg.selectAll(".bar")
+      .data(data)
+      .enter().append("g")
+      .attr("class", "bar")
+      .attr("transform", function (d) { return "translate(" + x(d.x) + "," + y(d.y) + ")"; });
+      
+    console.log("bars:", bar);
 
-bar.append("rect")
-    .attr("x", 1)
-    .attr("width", (x(data[0].dx) - x(0)) - 1)
-    .attr("height", function(d) { return height - y(d.y); })
-    .attr("fill", function(d) { return colorScale(d.y) });
+    bar.append("rect")
+      .attr("x", 1)
+      .attr("width", (x(data[0].dx) - x(0)) - 1)
+      .attr("height", function (d) { return height - y(d.y); })
+      .attr("fill", function (d) { return colorScale(d.y) });
 
-bar.append("text")
-    .attr("dy", ".75em")
-    .attr("y", -12)
-    .attr("x", (x(data[0].dx) - x(0)) / 2)
-    .attr("text-anchor", "middle")
-    .text(function(d) { return formatCount(d.y); });
+    // -------------------
+    w = x(data[0].dx) - x(0) - 1;
+    console.log("Width Stuff: ", w, data.length, w * data.length, width);
+    // -------------------
 
-svg.append("g")
-    .attr("class", "x axis")
-    .attr("transform", "translate(0," + height + ")")
-    .call(xAxis);
+    bar.append("text")
+      .attr("dy", ".75em")
+      .attr("y", -12)
+      .attr("x", (x(data[0].dx) - x(0)) / 2)
+      .attr("text-anchor", "middle")
+      .text(function (d) { return formatCount(d.y); });
 
-/*
-* Adding refresh method to reload new data
-*/
-function refresh(values){
-  // var values = d3.range(1000).map(d3.random.normal(20, 5));
-  var data = d3.layout.histogram()
-    .bins(x.ticks(20))
-    (values);
+    svg.append("g")
+      .attr("class", "x axis")
+      .attr("transform", "translate(0," + height + ")")
+      .call(xAxis);
 
-console.log('data:',data);
+    /*
+    * Adding refresh method to reload new data
+    */
+    function refresh(values) {
+      // var values = d3.range(1000).map(d3.random.normal(20, 5));
+      var data = d3.layout.histogram()
+        .bins(x.ticks(ticks))
+        // .bins(x.ticks(20))
+        (values);
+
+      console.log('data:', data);
 
 
-  // Reset y domain using new data
-  var yMax = d3.max(data, function(d){return d.length});
-  var yMin = d3.min(data, function(d){return d.length});
-  y.domain([0, yMax]);
-  var colorScale = d3.scale.linear()
-              .domain([yMin, yMax])
-              .range([d3.rgb(color).brighter(), d3.rgb(color).darker()]);
+      // Reset y domain using new data
+      var yMax = d3.max(data, function (d) { return d.length });
+      var yMin = d3.min(data, function (d) { return d.length });
+      y.domain([0, yMax]);
+      var colorScale = d3.scale.linear()
+        .domain([yMin, yMax])
+        .range([d3.rgb(color).brighter(), d3.rgb(color).darker()]);
 
-  var bar = svg.selectAll(".bar").data(data);
+      var bar = svg.selectAll(".bar").data(data);
 
-  // Remove object with data
-  bar.exit().remove();
+      // Remove object with data
+      bar.exit().remove();
 
-  bar.transition()
-    .duration(1000)
-    .attr("transform", function(d) { return "translate(" + x(d.x) + "," + y(d.y) + ")"; });
+      bar.transition()
+        .duration(1000)
+        .attr("transform", function (d) { return "translate(" + x(d.x) + "," + y(d.y) + ")"; });
 
-  bar.select("rect")
-      .transition()
-      .duration(1000)
-      .attr("height", function(d) { return height - y(d.y); })
-      .attr("fill", function(d) { return colorScale(d.y) });
+      bar.select("rect")
+        .transition()
+        .duration(1000)
+        .attr("height", function (d) { return height - y(d.y); })
+        .attr("fill", function (d) { return colorScale(d.y) });
 
-  bar.select("text")
-      .transition()
-      .duration(1000)
-      .text(function(d) { return formatCount(d.y); });
+      bar.select("text")
+        .transition()
+        .duration(1000)
+        .text(function (d) { return formatCount(d.y); });
 
-}
+    }
 
-// Calling refresh repeatedly.
-setInterval(function() {
-  var values = d3.range(1000).map(d3.random.normal(20, 5));
-  refresh(values);
-}, 2000);
+    // Calling refresh repeatedly.
+    setInterval(function () {
+      var values = d3.range(1000).map(d3.random.normal(20, 5));
+      refresh(values);
+    }, 2000);
 
-</script>
+  </script>
